<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_group_pages">
        <menu>
            <item
                android:id="@+id/drawer_index"
                android:icon="@mipmap/ic_drawer_wechat"
                android:checkable="true"
                android:checked="true"
                android:title="@string/index"/>
        </menu>
    </item>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_setting"
                android:checked="false"
                android:icon="@mipmap/ic_drawer_setting"
                android:checkable="true"
                android:title="@string/drawer_setting"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_drawer_about"
                android:checkable="true"
                android:title="@string/drawer_about"/>
        </menu>
    </item>
</menu>